# graphics_assignment2

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  make-clean.sh  make-release.sh  make.sh
assets/objs/bed/: bedMatress.mtl
assets/objs/blanket/: blanket.mtl
assets/objs/curtain/: curtain.mtl
assets/objs/floor/: floor.mtl
assets/objs/frog/: frog.mtl
assets/objs/light_sphere/: light_sphere.mtl
assets/objs/magic_orb/: magic_orb.mtl
assets/objs/skybox_cube/: skybox_cube.mtl
assets/objs/skybox_sphere/: skybox_sphere.mtl
assets/objs/stage_lights/: stage_lights.mtl
assets/objs/test_cube/: test_cube.mtl
assets/objs/texture_test/: texture_test.mtl
assets/objs/tv/: transforms.txt  transforms_pretty.txt  tv_body.mtl  tv_screen.mtl
assets/objs/tvs/: tv_scene.mtl
assets/shaders/: basic.frag  basic.vert  default.frag  default.vert  default_shadows.frag  default_shadows.vert  depth.frag  depth.geom  depth.vert  discrete_noise.frag  emissive.frag  emissive_textured.frag  legacy.vert  tangents.vert  tangents_shadows.vert  textured.frag  textured_nmap.frag  textured_nmap_shadows.frag  textured_normalmap.frag
include/: CMakeLists.txt
include/glm/: CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.h
src/common/: CMakeLists.txt  camera.cpp  camera.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  utils.cpp  utils.h  wrapper_glfw.cpp  wrapper_glfw.h
