CMAKE_MINIMUM_REQUIRED(VERSION 3.21.1)

LINK_DIRECTORIES("lib")
PROJECT("a.out")

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_EXECUTABLE("${PROJECT_NAME}" "src/main.cpp")

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

OPTION(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
OPTION(ASSIMP_BUILD_TESTS OFF)
OPTION(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF)
OPTION(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF)

SET(ASSIMP_BUILD_OBJ_IMPORTER ON)

# SET(CMAKE_EXE_LINKER_FLAGS "-static")
# SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a" CONFIG)
SET(BUILD_SHARED_LIBS OFF)

TARGET_LINK_LIBRARIES("${PROJECT_NAME}"
    ${CMAKE_DL_LIBS}
    GL
    GLU
    GLEW
    X11
    glfw3
    assimp
    pthread
)

INCLUDE_DIRECTORIES("include")
ADD_SUBDIRECTORY("include")
ADD_SUBDIRECTORY("src")

FILE(COPY assets DESTINATION .)
